# imio

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-04-11-refactor-ops-design.md
imio/: __init__.py  io.py  ops.py
src/imrw/: ops.py
tests/: test_ops.py
